# server-kit

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
crates/server-kit/: Cargo.toml  README.md
crates/server-kit-auth/: Cargo.toml
crates/server-kit-auth/src/: error.rs  jwt.rs  layer.rs  lib.rs
crates/server-kit-grpc/: Cargo.toml  README.md  build.rs
crates/server-kit-grpc/examples/: greeter_client.rs  greeter_server.rs  simple_server.rs
crates/server-kit-grpc/src/: channel.rs  error.rs  health.rs  lib.rs  reflection.rs  request_ext.rs  server.rs
crates/server-kit-grpc/src/config/: channel.rs  mod.rs  server.rs
crates/server-kit-grpc/src/interceptor/: auth.rs  metrics.rs  mod.rs  request_id.rs  trace.rs
crates/server-kit-rest/: Cargo.toml  README.md
crates/server-kit-rest/examples/: basic.rs  simple.rs  with_metrics.rs
crates/server-kit-rest/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  router.rs
crates/server-kit-rest/src/auth/: error.rs  jwt.rs  layer.rs  mod.rs
crates/server-kit-rest/src/layer/: json_error.rs  mod.rs  ratelimit.rs
crates/server-kit-rest/src/routes/: fallback.rs  health.rs  mod.rs
crates/server-kit/examples/: basic.rs  simple.rs  with_metrics.rs
crates/server-kit/src/: config.rs  environment.rs  lib.rs  logging.rs  router.rs  server.rs
crates/server-kit/src/layer/: mod.rs  trace.rs
crates/server-kit/src/routes/: health.rs
