[package]
name = "server-kit-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication middleware for server-kit"
keywords = ["axum", "auth", "jwt", "authentication"]
categories = ["web-programming::http-server", "authentication"]

[features]
default = ["jwt"]
jwt = ["dep:jsonwebtoken"]

[dependencies]
axum.workspace = true
serde.workspace = true
tower.workspace = true
tracing.workspace = true
serde_json = "1"

axum-extra = { version = "0.10", features = ["typed-header"] }
jsonwebtoken = { version = "9", optional = true }
