[package]
name = "server-kit-rest"
version = "0.1.0"
edition = "2021"
description = "Thin utility crate for axum-based REST servers"
license = "MIT"
keywords = ["axum", "server", "http", "rest", "tower"]
categories = ["web-programming::http-server"]

[features]
default = ["tracing", "compression"]
tracing = ["server-kit/tracing"]
compression = ["tower-http/compression-full"]
cors = ["tower-http/cors"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
ratelimit = ["dep:governor"]
auth = []
jwt = ["auth", "dep:jsonwebtoken"]
full = ["tracing", "compression", "cors", "metrics", "ratelimit", "jwt"]

[dependencies]
server-kit.workspace = true
axum = "0.8"
http = "1"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["signal", "rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = [
    "catch-panic",
    "request-id",
    "trace",
    "util",
    "timeout",
] }

[dependencies.tracing]
version = "0.1"
optional = false

[dependencies.metrics]
version = "0.24"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.16"
optional = true

[dependencies.governor]
version = "0.8"
optional = true

[dependencies.jsonwebtoken]
version = "9"
optional = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
tempfile = "3"

[[example]]
name = "with_metrics"
required-features = ["metrics"]
