[package]
name = "server-kit"
description = "Core utilities for server-kit crates"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tracing = ["dep:tracing-subscriber"]

[dependencies]
config = { version = "0.15", default-features = false, features = ["toml", "yaml", "json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

[dev-dependencies]
tempfile = "3"
